--- a/src/styles/layout/_App.scss
+++ b/src/styles/layout/_App.scss
@@ -6,6 +6,7 @@
   // gap: 1rem;
   max-width: 1400px;
   margin: 0 auto;
+  height: 100vh;
 
   &__header {
     position: sticky;
